example/lib/src/generated/errors/errors_localization_be.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Belarusian (`be`).
class ErrorsLocalizationBe extends ErrorsLocalization {
  ErrorsLocalizationBe([String locale = 'be']) : super(locale);

  @override
  String get error => 'Адбылася памылка';

  @override
  String get unexpectedError => 'Адбылася непрадбачаная памылка';

  @override
  String get bugReportSentText => 'Баг-рэпарт паспяхова адпраўлены.';
}
